--- a/src/components/pokecard/pokecard.scss
+++ b/src/components/pokecard/pokecard.scss
@@ -1,5 +1,24 @@
+.pokecard-overlay {
+  background-color: black;
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  z-index: 100;
+  top: 0;
+  left: 0;
+  opacity: 0.5;
+}
+
 .pokecard-wrapper {
   background-color: darkseagreen;
+  width: 400px;
+  height: 600px;
+  z-index: 101;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  position: absolute;
+  padding: 5px 16px;
 }
 
 .pokecard-topbar {
@@ -7,4 +26,24 @@
   display: grid;
   grid-template-columns: 1fr 4fr 1fr;
   text-align: center;
+}
+
+.topbar_name {
+  text-transform: capitalize;
+}
+
+.pokecard-content {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  padding: 20px;
+  text-align: center;
+}
+
+.pokecard-image {
+  padding: 5px;
+
+  img {
+    width: 100%;
+  }
 }
