--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,6 +21,17 @@ ul {
   margin: 0;
 }
 
+body {
+  font-family: "Josefin Sans", sans-serif;
+}
+
+h1 {
+  font-family: "Luckiest Guy";
+}
+
+h2 {
+  font-family: "sigma", verdana;
+}
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
 ul[role="list"],
 ol[role="list"] {
