Add style with logo, font family, size, weight and colors

--- a/src/components/deckList/deckList.scss
+++ b/src/components/deckList/deckList.scss
@@ -1,5 +1,9 @@
+.deckList_title {
+  text-align: center;
+}
+
 .pokemonSearchedList_grid {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
   gap: 15px;
 }
