--- a/src/components/pokeButton/pokeButton.scss
+++ b/src/components/pokeButton/pokeButton.scss
@@ -1,5 +1,6 @@
 .pokebutton-wrapper {
-  background-color: cadetblue;
+  background-color: #01589a;
+  color: white;
   text-align: center;
   border-radius: 5px;
   width: 100%;
