--- a/src/components/searchBar/searchBar.scss
+++ b/src/components/searchBar/searchBar.scss
@@ -1,15 +1,35 @@
+.searchbar_wrapper {
+  display: grid;
+  grid-template-columns: 1fr 6fr 1fr;
+  padding: 0px 6px;
+  gap: 6px;
+  align-items: center;
+  border: 2px solid #01589a;
+  border-radius: 5px;
+}
+
+.searchbar_img_wrapper {
+  padding: 5px;
+}
+
 .searchbar {
-  background-color: antiquewhite;
   text-align: center;
 }
 .search {
   background-color: white;
 }
+.searchbar_input_wrapper {
+  padding: 3px;
+  background-color: #01589a;
+}
+
 .searchbar_input {
   width: 20rem;
   background-color: white;
   border: none;
   padding: 0.5rem;
+  border-radius: 5px;
+  text-align: center;
 }
 .searchedList {
   color: black;
