--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,11 +27,15 @@ body {
 
 h1 {
   font-family: "Luckiest Guy";
+  font-size: xxx-large;
 }
 
 h2 {
   font-family: "sigma", verdana;
+  font-weight: 600;
+  font-size: larger;
 }
+
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
 ul[role="list"],
 ol[role="list"] {
