--- a/src/components/pokecard/pokecard.scss
+++ b/src/components/pokecard/pokecard.scss
@@ -21,6 +21,7 @@
   border: 1px solid rgba(0, 0, 0, 0.2);
   border-radius: 5px;
   align-content: space-evenly;
+  font-size: 22px;
 }
 
 .pokecard-topbar {
@@ -29,10 +30,16 @@
   grid-template-columns: 1fr 4fr 1fr;
   text-align: center;
   padding: 10px 0px;
+  font-size: x-large;
 }
 
 .topbar_name {
   text-transform: capitalize;
+}
+
+.pokecard-content_bold {
+  font-weight: bolder;
+  font-size: 26px;
 }
 
 .pokecard-content {
@@ -41,8 +48,10 @@
   gap: 5px;
   padding: 20px;
   text-align: center;
-  background-color: rgba(120, 200, 80, 0.25);
-  border: 2px solid rgb(78, 130, 52);
+  background-color: rgba(1, 88, 154, 0.25);
+  border: 2px solid rgb(64, 89, 198);
+  // background-color: rgba(120, 200, 80, 0.25);
+  // border: 2px solid rgb(78, 130, 52);
 }
 
 .pokecard-image {
