--- a/src/components/searchBar/searchBar.scss
+++ b/src/components/searchBar/searchBar.scss
@@ -4,8 +4,6 @@
   padding: 0px 6px;
   gap: 6px;
   align-items: center;
-  border: 2px solid #01589a;
-  border-radius: 5px;
 }
 
 .searchbar_img_wrapper {
@@ -14,13 +12,13 @@
 
 .searchbar {
   text-align: center;
+  background-color: rgba(1, 88, 154, 0.3);
 }
 .search {
   background-color: white;
 }
 .searchbar_input_wrapper {
   padding: 3px;
-  background-color: #01589a;
 }
 
 .searchbar_input {
