--- a/src/components/container/container.scss
+++ b/src/components/container/container.scss
@@ -1,4 +1,11 @@
 .container {
   margin: 0 auto;
   max-width: 1024px;
+  padding: 0 8px;
+
+  @media screen and (min-width: 601px) {
+    & {
+      padding: 0 8px;
+    }
+  }
 }
