--- a/src/components/pokecard/pokecard.scss
+++ b/src/components/pokecard/pokecard.scss
@@ -7,21 +7,28 @@
   top: 0;
   left: 0;
   opacity: 0.5;
+  cursor: pointer;
 }
 
 .pokecard-wrapper {
   display: grid;
   background-color: white;
-  width: 400px;
+  width: 86%;
   z-index: 101;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  position: absolute;
+  position: fixed;
   border: 1px solid rgba(0, 0, 0, 0.2);
   border-radius: 5px;
   align-content: space-evenly;
   font-size: 22px;
+
+  @media screen and (min-width: 500px) {
+    & {
+      width: 400px;
+    }
+  }
 }
 
 .pokecard-topbar {
@@ -37,8 +44,11 @@
   text-transform: capitalize;
 }
 
+.topbar_x {
+  cursor: pointer;
+}
+
 .pokecard-button_close_wrapper {
-  // background-color: aquamarine;
   text-align: -webkit-right;
   padding: 10px 15px;
 }
@@ -49,4 +59,5 @@
   padding: 2px 5px;
   border-radius: 5px;
   width: fit-content;
+  cursor: pointer;
 }
