--- a/src/components/deckList/deckList.scss
+++ b/src/components/deckList/deckList.scss
@@ -7,17 +7,17 @@
   display: grid;
   grid-template-columns: 1fr;
   gap: 15px;
-}
 
-@media screen and (min-width: 601px) and (max-width: 991px) {
-  .pokemonSearchedList_grid {
-    grid-template-columns: 1fr 1fr;
+  @media screen and (min-width: 601px) and (max-width: 991px) {
+    & {
+      grid-template-columns: 1fr 1fr;
+    }
   }
-}
 
-@media screen and (min-width: 992px) {
-  .pokemonSearchedList_grid {
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 15px;
+  @media screen and (min-width: 992px) {
+    & {
+      grid-template-columns: 1fr 1fr 1fr;
+      gap: 15px;
+    }
   }
 }
