--- a/src/components/searchBar/searchBar.scss
+++ b/src/components/searchBar/searchBar.scss
@@ -99,14 +99,13 @@
   justify-self: end;
   display: grid;
   grid-template-rows: 1fr 1fr;
-  align-self: center;
-  justify-self: center;
+  justify-self: end;
+  align-items: center;
 
   @media screen and (min-width: 601px) {
     & {
       grid-template-columns: 1fr 1fr;
       grid-template-rows: none;
-      align-items: center;
     }
   }
 }
