--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,12 @@
 .app_content {
-  padding-top: 145px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  padding-top: calc(var(--top-bar-height-mobile) + 24px);
 
   @media screen and (min-width: 601px) {
     & {
-      padding-top: 90px;
+      padding-top: calc(var(--top-bar-height-desktop) + 24px);
     }
   }
 }
